// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-darkGrey PicassoTypography-inheritWeight MuiTypography-body1"
          >
            Cell
          </div>
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;

exports[`TableCell renders compact 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body PicassoTableCell-compact"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-darkGrey PicassoTypography-inheritWeight MuiTypography-body1"
          >
            Cell
          </div>
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;

exports[`TableCell renders narrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body PicassoTableCell-narrow"
        >
          <div
            class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-darkGrey PicassoTypography-inheritWeight MuiTypography-body1"
          >
            Cell
          </div>
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;
